--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <title>{{ page.title }}</title>
   </head>
   <body>
-    {{ content}}
+    {% include navigation.html %}
+    {{ content }}
   </body>
 </html>
